--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/helpers": "^1.6",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "pusher/pusher-php-server": "^7.2",
         "unisharp/laravel-filemanager": "~1.8",
         "yoeunes/toastr": "^2.3"
     },
