--- a/.env
+++ b/.env
@@ -59,3 +59,9 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 NOCAPTCHA_SITEKEY=6LfXe5MlAAAAADWdSqk778lhyC_o4slGF3WXLE4S
 NOCAPTCHA_SECRET=6LfXe5MlAAAAAHfDyWA8OhrRlNDtnhaWgToMup-5
+
+
+# MOMO
+PARTNERCODE="MOMOBKUN20180529"
+ACCESS_KEY="klm05TvNBzhg7h7j"
+SECRET_KEY="at67qH6mk8w5Y1nAyMoYKMWACiEi2bsa"
